Fixed wrong hyperlinks

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <a
                             class="link"
                             target="_blank"
-                            href="https://nexttrain.feli.page"
+                            href="https://ets.feli.page"
                         >
                             ets.feli.page
                         </a>
@@ -182,7 +182,7 @@
                         <a
                             class="link"
                             target="_blank"
-                            href="https://nexttrain.feli.page"
+                            href="https://hw.feli.page"
                         >
                             hw.feli.page
                         </a>
@@ -214,7 +214,7 @@
                         <a
                             class="link"
                             target="_blank"
-                            href="https://covidhk.feli.page"
+                            href="https://url.feli.page"
                         >
                             url.feli.page
                         </a>
