Favicon and metadata

--- a/index.html
+++ b/index.html
@@ -6,10 +6,34 @@
         <title>Felix Yeung</title>
         <link rel="stylesheet" target="_blank" href="/css/main.css" />
         <link
+            rel="shortcut icon"
+            href="/assets/images/felixyeung.dev.png"
+            type="image/x-icon"
+        />
+        <link
             rel="stylesheet"
             target="_blank"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         />
+        <meta property="og:title" content="Felix Yeung" />
+        <meta property="og:description" content="Felix's Portfolio Website" />
+        <meta
+            property="og:image"
+            content="https://felixyeung.dev/assets/images/felixyeung.dev.png"
+        />
+        <meta property="og:url" content="https://felixyeung.dev/" />
+        <meta property="og:site_name" content="Felix Yeung" />
+        <meta name="twitter:title" content="Felix Yeung" />
+        <meta name="twitter:description" content=" Felix's Portfolio Website" />
+        <meta
+            name="twitter:image"
+            content=" https://felixyeung.dev/assets/images/felixyeung.dev.png"
+        />
+        <meta
+            name="twitter:card"
+            content="https://felixyeung.dev/assets/images/felixyeung.dev.png"
+        />
+        <meta name="twitter:image:alt" content="Felix's Icon" />
     </head>
     <body>
         <header>
