--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" target="_blank" href="/css/main.css" />
         <link
             rel="shortcut icon"
-            href="/assets/images/felixyeung.dev.png"
+            href="/assets/images/im.feli.page-full.png"
             type="image/x-icon"
         />
         <link
@@ -20,7 +20,7 @@
         <meta property="og:description" content="Felix's Portfolio Website" />
         <meta
             property="og:image"
-            content="https://felixyeung.dev/assets/images/felixyeung.dev.png"
+            content="https://felixyeung.dev/assets/images/im.feli.page.png"
         />
         <meta property="og:url" content="https://felixyeung.dev/" />
         <meta property="og:site_name" content="Felix Yeung" />
@@ -28,11 +28,11 @@
         <meta name="twitter:description" content=" Felix's Portfolio Website" />
         <meta
             name="twitter:image"
-            content=" https://felixyeung.dev/assets/images/felixyeung.dev.png"
+            content="https://felixyeung.dev/assets/images/im.feli.page.png"
         />
         <meta
             name="twitter:card"
-            content="https://felixyeung.dev/assets/images/felixyeung.dev.png"
+            content="https://felixyeung.dev/assets/images/im.feli.page.png"
         />
         <meta name="twitter:image:alt" content="Felix's Icon" />
     </head>
@@ -41,12 +41,10 @@
             <div class="appbar">
                 <img
                     class="appbar-logo"
-                    src="/assets/images/felixyeung.dev.svg"
+                    src="/assets/images/im.feli.page-full.svg"
                     alt="Logo"
                 />
-                <a class="appbar-title link" target="_blank" href="/"
-                    >Felix Yeung</a
-                >
+                <a class="appbar-title link" href="/">Felix Yeung</a>
             </div>
         </header>
         <main>
